--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>うまるうま</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <p>もし元旦に届いてる人いたら、えー。。。制作間に合っておりません！！！もうすぐできるよ！！！</p>
+  <div id="phone-frame">
+    <div id="screen">
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
+</html>
+
+
